--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
 body{
     font-family:'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
@@ -8,7 +7,6 @@ body{
     color: azure;
     background-color: rgb(35, 37, 49);
 }
-
 header{
     height: 100vh;
     display: flex;
@@ -17,13 +15,20 @@ header{
     align-items: center;
     text-align: center;
 }
+header img {
+    max-width: 700px; /* Garante que a imagem não ultrapasse o tamanho do contêiner */
+    height: auto; /* Mantém a proporção da imagem */
+    display: block; /* Faz a imagem ser um bloco, permitindo centralização */
+    margin:100px auto 0; /* Margem superior para a imagem */
+}
 
 header h1{
     font-size: 4em;
     margin: 0;
 }
 header p{
-    font-size: 1.5em;
+    font-size: 2em;
+    margin-top: 40px;
 }
 nav{
     background-color: rgb(29, 30, 40);
