Colocando variaveis de cor na root

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+:root{
+    --primary-color: #232531;
+    --nav-color: #1d1e28;
+}
 body{
-    font-family:'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto;
     margin: 0;
     padding: 0;
     color: azure;
-    background-color: rgb(35, 37, 49);
+    background-color: var(--primary-color);
 }
 header{
     height: 100vh;
@@ -31,7 +35,7 @@ header p{
     margin-top: 40px;
 }
 nav{
-    background-color: rgb(29, 30, 40);
+    background-color: var(--nav-color);
     width: 100%;
     padding: 10px;
     position: fixed;
